--- a/pexels-photo-search/package.json
+++ b/pexels-photo-search/package.json
@@ -34,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jshint": "^2.13.5"
+  },
+  "jshintConfig": {
+    "esversion": 8
   }
 }
