--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   # a base has not been set. This sample publishes the directory
   # located at the absolute path "root/project/build-output"
 
-  publish = "build/"
+  publish = "public/"
 
   # Default build command.
   command = "echo 'default context'"
