--- a/pexels-photo-search/.gitignore
+++ b/pexels-photo-search/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -22,5 +22,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.netlify
