update the build command in `netlify.toml` so that the app is automatically rebuilt on each deploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,7 +15,7 @@
 #   publish = "public/"
 
   # Default build command.
-  command = "echo 'default context'"
+  command = "npm run build"
 
 [dev]
   base = "pexels-photo-search/"
