--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,15 +6,15 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v2.7.1" # Use the sha / tag you want to point at
     hooks:
       - id: prettier
-        files: ^pexels-photo-search/
+        # files: ^pexels-photo-search/
   - repo: https://github.com/thibaudcolas/pre-commit-stylelint
     rev: "v14.10.0" # Use the sha / tag you want to point at
     hooks:
@@ -28,4 +28,4 @@ repos:
           # - stylelint-config-prettier@latest
           # Package names starting with `@` need to be quoted.
           # - "@scope/my-awesome-plugin@0.12.0"
-        files: ^pexels-photo-search/
+        # files: ^pexels-photo-search/
