--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,11 +1,27 @@
 {
-  // "extends": [
-  //   "stylelint-config-standard",
-  //   "stylelint-order",
-  //   "stylelint-config-prettier"
-  // ],
-  // "rules": {
-  //   "order/order": ["custom-properties", "declarations"],
-  //   "order/properties-order": ["width", "height"]
-  // }
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-order",
+    "stylelint-config-prettier"
+  ],
+  "rules": {
+    "selector-class-pattern": null,
+    "rule-empty-line-before": null,
+    "comment-empty-line-before": null,
+    "selector-no-vendor-prefix": null,
+    "no-descending-specificity": null,
+    "declaration-block-no-redundant-longhand-properties": null,
+    "font-family-name-quotes": null,
+    "custom-property-pattern": null,
+    "property-no-vendor-prefix": null,
+    "at-rule-no-vendor-prefix": null,
+    "keyframe-selector-notation": null,
+    "value-no-vendor-prefix": null,
+    "no-duplicate-selectors": null,
+    "color-function-notation": null,
+    "alpha-value-notation": null,
+    "color-hex-length": null,
+    "declaration-empty-line-before": null,
+    "function-no-unknown": null
+  }
 }
