--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-order",
-    "stylelint-config-prettier"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "rules": {
     "selector-class-pattern": null,
     "rule-empty-line-before": null,
