update stylesheets to comply with the `stylelint` rule "function-no-unknown"

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,7 +17,6 @@
     "color-function-notation": null,
     "alpha-value-notation": null,
     "color-hex-length": null,
-    "declaration-empty-line-before": null,
-    "function-no-unknown": null
+    "declaration-empty-line-before": null
   }
 }
