--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,7 +2,6 @@
   "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
   "rules": {
     "declaration-block-no-redundant-longhand-properties": null,
-    "color-hex-length": "long",
-    "declaration-empty-line-before": null
+    "color-hex-length": "long"
   }
 }
