--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-photo-search",
-  "dependencies": {},
   "scripts": {
     "start": "cd pexels-photo-search && netlify dev"
+  },
+  "devDependencies": {
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^27.0.0"
   }
 }
