--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: "v14.10.0" # Use the sha / tag you want to point at
     hooks:
       - id: stylelint
+        args: [--fix]
         # additional_dependencies: ['stylelint@13.2.1', 'stylelint-config-standard@20.0.0']
         additional_dependencies:
           # stylelint itself needs to be here when using additional_dependencies.
