--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "cd react-frontend && npm test"
   },
   "devDependencies": {
+    "markdownlint": "^0.27.0",
     "react-test-renderer": "^18.2.0",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
